# axum-template

./: .gitignore  Cargo.toml  Dockerfile  justfile
.github/workflows/: build-and-publish-images.yml  run-rust-checks.yml
configuration/: base.toml  local.toml  production.toml
src/: configuration.rs  lib.rs  main.rs  prelude.rs  telemetry.rs
src/clients/: mod.rs  random_number_service.rs
src/handlers/: error_test.rs  healthcheck.rs  mod.rs  random_number.rs
src/models/: error.rs  state.rs
src/router/: mod.rs  random_number.rs
src/utils/: axum.rs
tests/api/: health_check.rs  main.rs  random_number.rs
