[package]
name = "PKG_NAME"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
delegate = "0.12.0"
error-stack = { version = "0.4.1", features = ["serde", "spantrace"] }
once_cell = "1.18.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.43"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.5.1", features = [
  "trace",
  "cors",
  "compression-gzip",
] }
tower-request-id = "0.3.0"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
