[package]
name = "PKG_NAME"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
error-stack = { version = "0.4.1", features = ["serde", "spantrace"] }
mockall = "0.12.1"
once_cell = "1.18.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.5.1", features = [
  "trace",
  "cors",
  "compression-gzip",
] }
tower-request-id = "0.3.0"
tracing = "0.1.37"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
